tests/parser/argument_validation/test_09.m.octave.out
In test_09.m, line 4
|     arguments
|     ^^^^^^^^^ style: end statement with a semicolon
In test_09.m, line 5
|         ~
|          ^ error: expected IDENTIFIER, found NEWLINE instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 style issue(s), 1 error(s)
