tests/parser/argument_validation/test_09.m
% From https://www.mathworks.com/help/matlab/matlab_prog/function-argument-validation-1.html

function c = test_09(~,x)
    arguments
        ~
        x
    end

    % Function code
end
